Actualizacion para compatibilidad con Closure Templates

--- a/normalize.css
+++ b/normalize.css
@@ -161,7 +161,7 @@ samp {
 
 pre {
     white-space: pre;
-    white-space: pre-wrap;
+    /* @alternate */ white-space: pre-wrap;
     word-wrap: break-word;
 }
 
